fix top-text-spacing

--- a/front-end/src/assets/base.css
+++ b/front-end/src/assets/base.css
@@ -138,8 +138,9 @@ button,
 .button-icon {
   width: calc(var(--wac--line-height) * 1em);
   height: calc(var(--wac--line-height) * 1em);
-  transition: transform 100ms ease;
-  transition: opacity 300ms ease-in-out;
+  transition:
+    transform 100ms ease,
+    opacity 300ms ease-in-out;
 
   .chevron-expanded & {
     transform: rotate(90deg);
